<resources>
    <string name="app_name">MeteoApp</string>
    <string name="localityChoice">Current location</string>
    <string name="temperature"> T </string>
    <string name="measure">\u2103</string>
    <string name="oneDay">1 Day</string>
    <string name="threeDays">3 Days</string>
    <string name="week">Week</string>
    <string name="hintLocation">Enter location</string>
    <string name="nightModeSwitch">Night Mode</string>
    <string name="cBoxPressure">Atmosphere pressure</string>
    <string name="cBoxWindSpeed">Wind Speed</string>
    <string name="settingsBtnDescription">Settings</string>
    <string name="infoLink"><a>Additional Information</a></string>
    <string name="link">https://en.wikipedia.org/wiki/</string>

    <string name="oneDay_blank_fragment">oneDay_blank_fragment</string>
    <string name="threeDay_blank_fragment">threeDay_blank_fragment</string>
    <string name="week_blank_fragment">week_blank_fragment</string>
</resources>
